--- a/pages/Workshop-pediatria.html
+++ b/pages/Workshop-pediatria.html
@@ -121,19 +121,30 @@
             <div class="blog__details__hero set-bg mb-2 position-relative"
                 data-setbg="../img/blog/details/pediatria.jpg"
                 style="background: url('../img/blog/details/pediatria.jpg') no-repeat center center/cover; height: 400px;">
-                <div class="row d-flex justify-content-start h-100">
-                    <div class="col-lg-7 text-start d-flex align-items-start">
-                        <div class="blog__hero__text p-4 rounded shadow"
-                            style="max-width: 90%; position: absolute; top: 5rem; left: 20px; background: #d6a294; color: white;">
+                <div class="services__details__content" style="background-image: url(../img/bg1.png);">
+                    <div class="d-flex w-100 align-items-end">
+                        <div class="mr-3">
                             <div class="services__details__title">
-                                <h3 class="text-white"><img src="../img/icons/Pediatra .png"
-                                        style="width: 3rem; color: white;" class="fa mr-3" alt="">Pediatria</h3>
+                                <h3><img src="../img/icons/Pediatra .png" class="fa " alt="">
+                                </h3>
                             </div>
                         </div>
+                        <div>
+                            <h4 class="text-white"><a href="team-sing.html#D">Dra Patrícia P.
+                                    Ronquillo</a></h4>
+                            <h5>Médica Geral</h5>
+                        </div>
+                    </div>
+                    <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                        <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 90min |
+                            <i class="fa fa-user"></i>
+                            Online
+                        </span>
+
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center mt-3">
+            <div class="row d-flex justify-content-center mt-6">
                 <div class="col-lg-12">
                     <div class="services__details__text">
                         <div class="row d-flex justify-content-center">
@@ -175,7 +186,7 @@
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/crianca-a-tossir.jpg">
-                                            <a href="#" class="play-btn video-popup">Live</a>
+                                            <a href="#" class="play-btn ">Online - 90min</a>
                                         </div>
                                     </div>
                                 </div>
@@ -215,8 +226,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshop-bebe.html">Autonomia do bebé e da criança.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -230,8 +241,8 @@
                                 <h5><a href="workshop-bebe.html">Marcos do desenvolvimento infantil nos primeiros 12
                                         meses de vida.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -244,8 +255,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshp-gravidez.html">Terapia Snoezelen na gravidez</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
