--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -99,27 +99,27 @@
                         <div class="services__details__pic">
                             <div class="services__details__pic">
                                 <img src="../img/blog/amame-grupo.jpg" alt="">
-                                <div class="services__details__content">
-                                    <div class="row w-100 align-items-center">
-                                        <div class="col-lg-8 col-md-8 col-sm-8">
+
+                                <div class="services__details__content" style="background-image: url(../img/bg1.png);">
+                                    <div class="d-flex w-100 align-items-end">
+                                        <div class="mr-3">
                                             <div class="services__details__title">
-                                                <span>Dra. Patrícia Pérez Ronquillo</span>
-                                                <h3><img src="../img/icons/amamentação-white.png" class="fa mr-3"
-                                                        alt="">Marcação</h3>
+                                                <h3><img src="../img/icons/amamentação-white.png" class="fa " alt="">
+                                                </h3>
                                             </div>
                                         </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-4 text-end">
-                                            <div class="services__details__widget">
-                                                <div class="rating">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </div>
-                                                <h4>1h30min</h4>
-                                            </div>
+                                        <div>
+                                            <h4 class="text-white"><a href="team-sing.html#D">Dra Patrícia P.
+                                                    Ronquillo</a></h4>
+                                            <h5>Médica Geral</h5>
                                         </div>
+                                    </div>
+                                    <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                                        <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 05 sessões de 1h30min |
+                                            <i class="fa fa-user"></i>
+                                            presencial
+                                        </span>
+
                                     </div>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                                                             para
                                                             a Amamentação em grupo
                                                         </h2>
-                                                        <h5 class="mb-0 mt-4 h4"><b>A amamentação tem tanto de instinto
+                                                        <h5 class="mb-0 mt-2 h4"><b>A amamentação tem tanto de instinto
                                                                 como de aprendizagem!</b></h5>
                                                     </div>
                                                 </div>
@@ -147,7 +147,7 @@
 
                                 </div>
                             </div>
-                            <p class="mt-4">
+                            <p class="mt-2">
                                 <b class="underline">Este curso destina-se a:</b> grávidas ou casais após as 20 semanas
                                 de gestação e realização da ecografia morfológica.
                                 <br>
@@ -343,7 +343,7 @@
                             <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
                                     grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -358,7 +358,7 @@
                             <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
                                     Individual</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -372,7 +372,7 @@
                         <div class="blog__item__text">
                             <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
