--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -243,7 +243,7 @@
                             <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
                                     grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -258,7 +258,7 @@
                             <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
                                     Individual</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -272,7 +272,7 @@
                         <div class="blog__item__text">
                             <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -288,7 +288,7 @@
                         <div class="blog__item__text">
                             <h5><a href="curso-prep-indiv.html">Curso de Preparação para o Parto individual</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
