--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -120,19 +120,30 @@
         <div class="container mt-9">
             <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/amame.jpg"
                 style="background: url('../img/blog/details/amame.jpg') no-repeat center center/cover; height: 400px;">
-                <div class="row d-flex justify-content-start h-100">
-                    <div class="col-lg-7 text-start d-flex align-items-start">
-                        <div class="blog__hero__text p-4 rounded shadow"
-                            style="max-width: 90%; position: absolute; top: 5rem; left: 20px; background: #d6a294; color: white;">
+                <div class="services__details__content" style="background-image: url(../img/bg4.png);">
+                    <div class="d-flex w-100 align-items-end">
+                        <div class="mr-3">
                             <div class="services__details__title">
-                                <h3 class="text-white"><img src="../img/icons/amamentação-white.png"
-                                        style="width: 3rem; color: white;" class="fa mr-3" alt="">Amamentação</h3>
+                                <h3><img src="../img/icons/amamentação-white.png" class="fa " alt="">
+                                </h3>
                             </div>
                         </div>
+                        <div>
+                            <h4 class="text-white"><a href="team-sing.html#D">Dra Patrícia P.
+                                    Ronquillo</a></h4>
+                            <h5>Médica Geral</h5>
+                        </div>
+                    </div>
+                    <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                        <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min |
+                            <i class="fa fa-desktop"></i>
+                            Online
+                        </span>
+
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center mt-3">
+            <div class="row d-flex justify-content-center mt-4">
                 <div class="col-lg-12">
                     <div class="services__details__text">
                         <div class="row d-flex justify-content-center">
@@ -187,7 +198,7 @@
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/mae-deitada.jpg">
-                                            <a href="#" class="play-btn video-popup">Live</a>
+                                            <a href="#" class="play-btn ">Online - 60min</a>
                                         </div>
                                     </div>
                                 </div>
@@ -197,7 +208,7 @@
                 </div>
             </div>
 
-            <div class="row d-flex justify-content-center mt-3">
+            <div class="row d-flex justify-content-center mt-6">
                 <div class="col-lg-12">
                     <div class="services__details__text">
                         <div class="row d-flex justify-content-center">
@@ -240,8 +251,7 @@
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/mae-amamentando.jpg">
-                                            <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
-                                                12/06/2025</a>
+                                            <a href="#" class="play-btn ">Online - 60min</a>
                                         </div>
                                     </div>
                                 </div>
@@ -280,8 +290,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshop-bebe.html">Sono seguro do bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -294,8 +304,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="worshop-Parentalidade.html">Birras: como sobreviver!</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -308,8 +318,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="Workshop-pediatria.html">Doenças respiratórias infantis</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
