--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -101,8 +101,19 @@
         <div class="container mt-9">
             <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/workshop.jpg"
                 style="background: url('../img/blog/details/workshop.jpg') no-repeat center center/cover; height: 400px;">
+                <div class="row d-flex justify-content-start h-100">
+                    <div class="col-lg-7 text-start d-flex align-items-start">
+                        <div class="blog__hero__text p-4 rounded shadow"
+                            style="width: 20rem; max-width: 90%; position: absolute; top: 5rem; left: 20px; background: #d6a294; color: white;">
+                            <div class="services__details__title">
+                                <h3 class="text-white"><img src="../img/icons/workshop.png"
+                                        style="width: 3rem; color: white;" class="fa mr-3" alt="">Workshops</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row d-flex justify-content-center mt-3">
+            <div class="row d-flex justify-content-center mt-4">
                 <div class="col-lg-12">
                     <div class="services__details__text">
                         <div class="row d-flex justify-content-center">
@@ -179,8 +190,8 @@
                                 <h5><a href="workshop-amament.html">Amamentação sem dor: realidade ou ficção?</a>
                                 </h5>
                                 <ul>
-                                    <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -193,8 +204,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshop-amament.html">Amamentação durante o sono do bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -208,8 +219,8 @@
                                 <h5><a href="workshop-bebe.html">Exterogestação: os primeiros 3 meses do seu
                                         bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -224,8 +235,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshop-bebe.html">Autonomia do bebé e da criança.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -239,8 +250,8 @@
                                 <h5><a href="workshop-bebe.html">Marcos do desenvolvimento infantil nos primeiros 12
                                         meses de vida.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -253,8 +264,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshp-gravidez.html">Terapia Snoezelen na gravidez</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -269,8 +280,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshop-bebe.html">Sono seguro do bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -283,8 +294,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="worshop-Parentalidade.html">Birras: como sobreviver!</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -297,8 +308,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="Workshop-pediatria.html">Doenças respiratórias infantis</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -315,8 +326,8 @@
                                 <h5><a href="workshop-primeiros-socoros.html">Engasgamento no primeiros 12 meses de
                                         vida.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
