--- a/pages/curso-prep-grupo.html
+++ b/pages/curso-prep-grupo.html
@@ -1,5 +1,3 @@
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
 <!DOCTYPE html>
 <html lang="en">
 
@@ -29,80 +27,7 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
 
     <style>
-        .services__item {
-            background: #dfb080;
-            padding: 45px 30px 45px 50px;
-            margin-bottom: 30px;
-            border-radius: 5px;
-            line-height: 2.1;
-            color: white !important;
-            height: 23rem;
-        }
 
-        .services__item .services__item__text ul li a {
-            color: #ffffff;
-            text-decoration: underline;
-        }
-
-        b {
-            color: #d6a294;
-            font-weight: 400;
-        }
-
-        .services__details__pic {
-            position: relative;
-            overflow: hidden;
-            height: 400px;
-            margin-bottom: 60px;
-            border-radius: 10px;
-        }
-
-        .services__details__title h3 {
-            width: 4rem;
-            display: flex;
-            align-items: center;
-        }
-
-        .services__details__pic img {
-            width: 100%;
-            height: auto;
-            display: block;
-            border-radius: 8px;
-        }
-
-        .services__details__content {
-            position: absolute;
-            bottom: 3rem;
-            left: 10px;
-            width: 26rem;
-            max-width: 60%;
-            background-color: #dfb080;
-            padding: 15px;
-            border-radius: 8px;
-            color: white;
-        }
-
-        .services__details__title span {
-            display: block;
-            font-size: 14px;
-            color: #ffffff;
-            text-transform: uppercase;
-        }
-
-        .services__details__title h3,
-        .services__details__widget h3 {
-            font-size: 32px;
-            font-weight: bold;
-        }
-
-        .services__details__widget .rating i {
-            color: #f8d210;
-        }
-
-        .clicavel {
-            background: transparent;
-            border: none;
-        }
     </style>
     <script>
         fetch('header.html')
@@ -172,27 +97,26 @@
                         <div class="services__details__pic">
                             <div class="services__details__pic">
                                 <img src="../img/blog/details/151.jpeg" alt="">
-                                <div class="services__details__content">
-                                    <div class="row w-100 align-items-center">
-                                        <div class="col-lg-8 col-md-8 col-sm-8">
+                                <div class="services__details__content" style="background-image: url(../img/bg1.png);">
+                                    <div class="d-flex w-100 align-items-end">
+                                        <div class="mr-3">
                                             <div class="services__details__title">
-                                                <span>Dra. Patrícia p. Ronquillo</span>
-                                                <h3><img src="../img/icons/pregnat-white.png" class="fa mr-3"
-                                                        alt="">Marcação</h3>
+                                                <h3><img src="../img/icons/amamentação-white.png" class="fa " alt="">
+                                                </h3>
                                             </div>
                                         </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-4 text-end">
-                                            <div class="services__details__widget">
-                                                <div class="rating">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </div>
-                                                <h4>1h30min</h4>
-                                            </div>
+                                        <div>
+                                            <h4 class="text-white"><a href="team-sing.html#D">Dra Patrícia P.
+                                                    Ronquillo</a></h4>
+                                            <h5>Médica Geral</h5>
                                         </div>
+                                    </div>
+                                    <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                                        <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 07 sessões de 1h30min |
+                                            <i class="fa fa-user"></i>
+                                            presencial
+                                        </span>
+
                                     </div>
                                 </div>
                             </div>
@@ -430,8 +354,8 @@
                             <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
                                     grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
-                                <li>Dec 06, 2019</li>
+                                <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                <li>07 sessões de 1h30min </li>
                             </ul>
                         </div>
                     </div>
@@ -445,8 +369,8 @@
                             <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
                                     Individual</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
-                                <li>Dec 06, 2019</li>
+                                <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                <li>07 sessões de 1h30min </li>
                             </ul>
                         </div>
                     </div>
@@ -459,8 +383,8 @@
                         <div class="blog__item__text">
                             <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                <li>Dec 06, 2019</li>
+                                <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                <li>07 sessões de 1h30min </li>
                             </ul>
                         </div>
                     </div>
