--- a/pages/curso.html
+++ b/pages/curso.html
@@ -377,7 +377,7 @@
                         <div class="blog__item__text">
                             <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
                             <ul>
-                                <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -391,7 +391,7 @@
                         <div class="blog__item__text">
                             <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -405,7 +405,7 @@
                         <div class="blog__item__text">
                             <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
                             <ul>
-                                <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
