--- a/pages/workshp-gravidez.html
+++ b/pages/workshp-gravidez.html
@@ -121,19 +121,30 @@
             <div class="blog__details__hero set-bg mb-2 position-relative"
                 data-setbg="../img/blog/details/gravidez.jpeg"
                 style="background: url('../img/blog/details/bebe.jpg') no-repeat center center/cover; height: 400px;">
-                <div class="row d-flex justify-content-start h-100">
-                    <div class="col-lg-7 text-start d-flex align-items-start">
-                        <div class="blog__hero__text p-4 rounded shadow"
-                            style="max-width: 90%; position: absolute; top: 5rem; left: 20px; background: #d6a294; color: white;">
+                <div class="services__details__content" style="background-image: url(../img/bg2.png);">
+                    <div class="d-flex w-100 align-items-end">
+                        <div class="mr-3">
                             <div class="services__details__title">
-                                <h3 class="text-white"><img src="../img/icons/gravidez-white.png"
-                                        style="width: 3rem; color: white;" class="fa mr-3" alt="">Gravidez</h3>
+                                <h3><img src="../img/icons/gravidez-white.png" class="fa " alt="">
+                                </h3>
                             </div>
                         </div>
+                        <div>
+                            <h4 class="text-white"><a href="team-sing.html#D">Dra Patrícia P.
+                                    Ronquillo</a></h4>
+                            <h5>Médica Geral</h5>
+                        </div>
+                    </div>
+                    <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                        <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min |
+                            <i class="fa fa-user"></i>
+                            presencial
+                        </span>
+
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center mt-3">
+            <div class="row d-flex justify-content-center mt-6">
                 <div class="col-lg-12">
                     <div class="services__details__text">
                         <div class="row d-flex justify-content-center">
@@ -146,7 +157,8 @@
                                                 <div class="section-title">
                                                     <h2 id="title" class="subtitle fw-bold h2">
                                                     </h2>
-                                                    <h5 class="mb-0 mt-2 h4"><b>1 - Terapia Snoezelen na gravidez:</b>
+                                                    <h5 class="mb-0 mt-2 h4"><b>1 - Terapia Snoezelen na
+                                                            gravidez:</b>
                                                     </h5>
                                                 </div>
                                             </div>
@@ -158,7 +170,8 @@
                         </div>
                         <div class="col-lg-12 d-flex">
                             <div class="col-lg-6">
-                                <p>A ansiedade é um dos transtornos mais comuns durante a gravidez. Venha perceber como
+                                <p>A ansiedade é um dos transtornos mais comuns durante a gravidez. Venha perceber
+                                    como
                                     é que a nossa Terapia Snoezelen
                                     pode ajudá-la durante a gravidez e visite a nossa sala única em Moçambique.</p>
                                 <div class="services__details__desc">
@@ -172,7 +185,7 @@
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/Snoezelen.jpg">
-                                            <a href="#" class="play-btn video-popup">Live</a>
+                                            <a href="#" class="play-btn ">Presencial - 60min</a>
                                         </div>
                                     </div>
                                 </div>
@@ -213,8 +226,8 @@
                                 <h5><a href="workshop-amament.html">Amamentação sem dor: realidade ou ficção?</a>
                                 </h5>
                                 <ul>
-                                    <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -227,8 +240,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshop-amament.html">Amamentação durante o sono do bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -242,8 +255,8 @@
                                 <h5><a href="workshop-bebe.html">Exterogestação: os primeiros 3 meses do seu
                                         bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
