--- a/pages/worshop-Parentalidade.html
+++ b/pages/worshop-Parentalidade.html
@@ -120,19 +120,30 @@
         <div class="container mt-9">
             <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/parents.png"
                 style="background: url('../img/blog/details/daad.jpg') no-repeat center center/cover; height: 400px;">
-                <div class="row d-flex justify-content-start h-100">
-                    <div class="col-lg-7 text-start d-flex align-items-start">
-                        <div class="blog__hero__text p-4 rounded shadow"
-                            style="max-width: 90%; position: absolute; top: 5rem; left: 20px; background: #d6a294; color: white;">
+                <div class="services__details__content" style="background-image: url(../img/bg1.png);">
+                    <div class="d-flex w-100 align-items-end">
+                        <div class="mr-3">
                             <div class="services__details__title">
-                                <h3 class="text-white"><img src="../img/icons/Workshops.png"
-                                        style="width: 3rem; color: white;" class="fa mr-3" alt="">Parentalidade</h3>
+                                <h3><img src="../img/icons/home.png" class="fa " alt="">
+                                </h3>
                             </div>
                         </div>
+                        <div>
+                            <h4 class="text-white"><a href="team-sing.html#D">Dra Patrícia P.
+                                    Ronquillo</a></h4>
+                            <h5>Médica Geral</h5>
+                        </div>
+                    </div>
+                    <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                        <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 90min |
+                            <i class="fa fa-user"></i>
+                            presencial
+                        </span>
+
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center mt-3">
+            <div class="row d-flex justify-content-center mt-6">
                 <div class="col-lg-12">
                     <div class="services__details__text">
                         <div class="row d-flex justify-content-center">
@@ -171,7 +182,7 @@
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/bira.png">
-                                            <a href="#" class="play-btn video-popup">presencial - 20/1/2025</a>
+                                            <a href="" class="play-btn ">Presencial - 90min</a>
                                         </div>
                                     </div>
                                 </div>
@@ -212,8 +223,8 @@
                                 <h5><a href="workshop-amament.html">Amamentação sem dor: realidade ou ficção?</a>
                                 </h5>
                                 <ul>
-                                    <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team 4.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -226,8 +237,8 @@
                             <div class="blog__item__text">
                                 <h5><a href="workshop-amament.html">Amamentação durante o sono do bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-7.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
@@ -241,8 +252,8 @@
                                 <h5><a href="workshop-bebe.html">Exterogestação: os primeiros 3 meses do seu
                                         bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
+                                    <li>60min ONLINE</li>
                                 </ul>
                             </div>
                         </div>
