--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         }
 
         .consultation__video {
-            height: 674px;
+            height: 550px;
             width: 1200px;
         }
 
@@ -228,15 +228,16 @@
     </section>
     <!-- Hero Section End -->
 
-    <section class="consultation mt-4">
+    <section class="consultation mt-6">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 d-flex justify-content-center">
-                    <div class="consultation__video set-bg" data-setbg="img/video.jpeg">
-                        <a href="" class="play-btn video-popup">
+                    <a href="video/clinica.mp4" class="play-btn video-popup align-content-center">
+                        <div class="consultation__video set-bg" data-setbg="video/video-cover.jpg">
                             <i class="fa fa-play"></i>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
+
                 </div>
             </div>
         </div>
@@ -272,7 +273,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6">
-                    <div class="about__video employer set-bg" data-setbg="img/gallery/clinic.jpg">
+                    <div class="about__video employer set-bg" data-setbg="img/team/equipa.jpg">
 
                     </div>
                 </div>
