--- a/info.html
+++ b/info.html
@@ -1,9 +1,20 @@
-<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><!DOCTYPE html>
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-   <meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+    <meta name="description"
+        content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -194,10 +205,11 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
- <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank"
+        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
-      </a>
+    </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -250,19 +262,14 @@
                                             que possível!
                                         </p>
                                         <input type="text" class="form-control form-group" placeholder="Nome" />
-                                        <input type="contact" class="form-control form-group"
-                                            placeholder="Contacto telefónico" />
                                         <input type="email" class="form-control form-group" placeholder="Email" />
-                                        <input type="text" class="form-control form-group"
-                                            placeholder="Semanas de Gestação ou Idade do Bebé" />
                                         <input type="text" class="form-control form-group" placeholder="Assunto" />
                                         <textarea class="form-control form-group" placeholder="Messagem"
                                             style="height: 16rem;"></textarea>
                                         <p style="text-align: initial;font-size: 11px;">Os dados recolhidos, serão
                                             utilizados exclusivamente para prestar as
-                                            informações comerciais dos serviços solicitados. Para mais informações leia a política de privacidade do Centro
-                                            Pré e Pós Parto
-
+                                            informações comerciais dos serviços solicitados. Para mais informações leia
+                                            a política de privacidade d'<i>A Clinica</i> e
                                             Poderá solicitar qualquer esclarecimento por e-mail para
                                             geral@aclinica-mz.com.</p>
                                         <button type="submit" class="contact_form_submit">Enviar</button>
