--- a/footer.html
+++ b/footer.html
@@ -52,7 +52,7 @@
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">links úteis</h4>
                 <p>
-                    <a href="#!" class="text-white">Apoio ao domicilio</a>
+                    <a href="pages/domicilio.html" class="text-white">Apoio ao domicilio</a>
                 </p>
                 <p>
                     <a href="pages/cursos.html" class="text-white">Cursos</a>
@@ -65,7 +65,7 @@
                     <a href="info.html" class="text-white">Pedido de informação</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Primeiros Socorros</a>
+                    <a href="pages/workshop-primeiros-socoros.html" class="text-white">Primeiros Socorros</a>
                 </p>
                 <p>
                     <a href="humanitario.html" class="text-white">Trabalho humanitário</a>
