--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="consultation__video set-bg" data-setbg="img/bg1.png"
-                        style="background-image: url(&quot;img/gallery/gallery-4.jpg&quot;); height: 30rem; border-radius: 10px;">
+                    <div class="set-bg" data-setbg="img/bg1.png"
+                        style="background-image: url(&quot;img/bg1.png&quot;);height: 30rem;border-radius: 10px;display: flex;justify-content: center; padding-top: 2rem;">
 
                         <div class="col-lg-10">
                             <div class="row">
