--- a/team.html
+++ b/team.html
@@ -230,7 +230,7 @@
                             <div class="col-lg-12">
                                 <div class="section-title">
                                     <h2 class="h4 d-flex align-intems-center justify-content-center"><img
-                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            src="../img/icons/contabilidade.png" class="mr-2" style="width: 2rem;"
                                             alt="">Departamento Financeiro
                                     </h2>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
@@ -246,7 +246,7 @@
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Ana Lusete Matlabe</h4>
-                                            <p class="text-left">Técnica de Saúde Pública e Gestão Ambiental</p>
+                                            <p class="text-left">Contabilidade</p>
                                         </div>
                                     </a>
                                 </div>
@@ -370,7 +370,7 @@
                             <div class="col-lg-12">
                                 <div class="section-title">
                                     <h2 class="h4 d-flex align-intems-center justify-content-center"><img
-                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;" alt="">
+                                            src="../img/icons/Esterizacao.png" class="mr-2" style="width: 2rem;" alt="">
                                         Higienização
 
                                     </h2>
